<resources>
    <string name="app_name">Receipt\'As</string>
    <string name="title_activity">Receipt\'As</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="request_permission_title">Permission request</string>
    <string name="request_permission_message">The application need the following permissions :\n - Read external file\n - Access camera</string>
...


    <string name="item_text_placeholder">Item</string>

    <string name="receipt_name_placeholder">Receipt name</string>
    <string-array name="receipt_detail_tabs_names">
        <item>Products list</item>
        <item>Summary</item>
    </string-array>
    <string name="receipt_total">Total price : %1$.2f %2$.3S</string>
    <string name="receipt_remaining">Remaining : %1$.2f %2$.3S</string>
    <string name="participant_total">%1$.2f %2$.3S</string>
    <string name="payer_name">%1$s (payer)</string>
    <string name="unassigned_total">Total unassigned objects: %1$.2f %2$.3S</string>
...
